Removed the mailer_class.php due to its not used.
Fixed feedback.php to use mail() and cleaned up code a bit.
Updated perfmon.php to now require the admin password.
Updated create_universe.php to display the importing of the languages into the same html table as the rest.
Updated schema.php, we now only create the table if it doesn't already exist.

TheKabal (21 June 2012)
--------------------------------------
Massive lists of fixes to PHP notices
Changes to bring all pages to a common coding style guideline level (in progress)
Eliminated global_funcs (see global_includes instead), eliminated several functions, and moved others into individual files
Greatly simplified the style & html for login, index, and main resulting in a single stylesheet they currently use
Added German language to game


TheKabal (3 May 2012)
--------------------------------------
Merged patch for teams.php from rjordan (SF Patch # 906580): revision 1450
Changed all (confusing/inconsistent) references to Alliance(s) to Team(s) instead.
Removed personal credits notices.
Moved all documents (newplayer/faq) into docs directory.
(Temporarily) removed innodb references, as they used an SQL syntax that is no longer supported (threw an error).
test
TheMightyDude (22 May 2011)
--------------------------------------
[1467445] Escape Pods not working (fixed)
Fixed at long last the Double Death Attack Bug along with part of the bounty code.

TheMightyDude (27 January 2011)
--------------------------------------
Fixed the "Unable to connect to the database" Bug.
I thought it was about time this bug was fixed :P

TheMightyDude (13 June 2010)
--------------------------------------
Testing SVN Write access, Once again :P

TheMightyDude (04 May 2010)
--------------------------------------
Small fix to the Insignia code that stops the players name from moving over when several players are at top rank.

TheMightyDude (19 February 2010)
--------------------------------------
Testing SVN
